# regexm

./: .gitignore  Makefile  README.md  __init__.py  demo.py  examples.py  main.py  pyproject.toml  pytest.ini  quick_start.py  test_validators.py
.github/workflows/: package.yaml
src/: __init__.py  cnh.py  cpf.py  crv.py  email.py  password.py  phone.py  plate.py
tests/modules/: test_cnh.py  test_cpf.py
validators/: __init__.py  cnh.py  cpf.py  crv.py  driver.py  email.py  password.py  phone.py  plate.py  user.py
