[project]
name = "regexm"
version = "0.0.1"
description = "A package for regex manipulation about brasilian patterns"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mauricio Benjamin", email = "mauriciobenjamin700@gmail.com" }
]
license = { text = "MIT" }

dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=9.0.1",
    "ruff>=0.12.5",
    "snowflake>=1.6.0",
]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle (inclui espaçamento, espaços desnecessários)
    "F",    # pyflakes
    "I",    # isort (ordem de imports)
    "Q",    # flake8-quotes (aspas)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

# Ordem alfabética de imports
[tool.isort]
profile = "black"
line_length = 79
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true

# Black para garantir compatibilidade de formatação
[tool.black]
line-length = 79
target-version = ["py311"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"